<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".AddNote">

    <TextView
        android:id="@+id/txtDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_add_note"
        android:textColor="#FAFAFA"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutAddNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_linear_background"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtDashboardTitle"
        app:layout_constraintBottom_toTopOf="@id/layoutBottomButtonsAddNote"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/edtNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:ems="10"
            android:hint="@string/hint_note_title"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#CACACA"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <EditText
            android:id="@+id/edtNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:ems="10"
            android:hint="@string/hint_note_desc"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:textColor="#FFFFFF"
            android:textColorHint="#CACACA"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSaveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_note"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottomButtonsAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_main_menu"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>