<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ViewNotes">

    <TextView
        android:id="@+id/txtViewNotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_notes_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutNotesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_linear_background"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtViewNotesTitle"
        app:layout_constraintBottom_toTopOf="@id/layoutNoteSearch">

        <TextView
            android:id="@+id/txtNotesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No notes saved yet."
            android:textSize="16sp"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNoteSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_linear_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/layoutBottomButtonsViewNotes"
        app:layout_constraintVertical_weight="1">

        <EditText
            android:id="@+id/editSearchNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hint_search_notes"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnAddNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_note"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnShowAllNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:layout_marginStart="10dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSearchNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_notes"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottomButtonsViewNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_main_menu"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>